# faasten

./: .gitignore  .gitmodules  Cargo.nix  Cargo.toml  LICENSE.txt  Procfile  README.md  README_IFC.md  benchmarks.sh  bootstrap-config.yml  build.rs  calc_storage_stats.py  crate-hashes.json  default.nix  deploy_tikv.md  fc_wrapper_test.sh  old-README.md  process_data.py  rust-toolchain.toml  shell.nix  snapfaas-setup.sh  storage_stats.sh  syscall_storage_stats.sh  system-components.md  todo.md
.archive/microbenchmark/: copyfs.sh  parse_out_get_normalized.py  setup.sh
.archive/scripts/: run-snapctr-snapshot-example.sh
bins/client/: main.rs
bins/fc_wrapper/: main.rs
bins/firerunner/: main.rs
bins/multivm/: main.rs
bins/server/: main.rs
bins/sfclient/: main.rs
bins/singlevm/: main.rs
bins/snapctr/: configs.rs  default-conf.yaml  example_workload.json  gateway.rs  main.rs
bins/webhook/: app.rs  app_config.yaml  config.rs  example_config.yaml  main.rs  snapfaas_config.yaml
experiments/: README.md  generator.py  process_data.py  run_experiment_tcpgateway.sh
experiments/multiapp/: workload.yaml
experiments/multiapp-large/: workload.yaml
experiments/multiapp-medium/: workload.yaml
experiments/oneapp-large/: function_config.yaml
experiments/oneapp-medium/: workload.yaml
frontends/: README.md
frontends/httpserver/: Cargo.toml
frontends/webfront/: Cargo.toml
frontends/webfront/src/: app.rs  authenticated_cas.html  authenticated_github.html  do_login_example.html  init.rs  main.rs
frontends/webhook/: Cargo.toml
frontends/webhook/src/: app.rs  config.rs  main.rs  server.rs
functions/: .gitignore  Dockerfile-python  Makefile  README.md  build.sh  config.yml  docker_clean.sh  docker_install.sh
functions/fsutil/: workload.py
functions/hello/: workload.py
functions/hellojs/: workload.js
functions/jwt/: workload.py
functions/sys-fs/: Makefile  workload.py
functions/sys_gate/: workload.py
images/: mk_rtimage.sh  postscript.sh  prelude.sh
images/common/: Makefile
macrobenchmark/: multiapp-medium.json  process_many.py  run_experiment_filegateway.sh
macrobenchmark/multiapp-large/: function_config.yaml
macrobenchmark/multiapp-small/: workload.yaml
macrobenchmark/oneapp-large/: workload.yaml
microbenchmark/: .gitignore  README.md  cleanup.sh  default_env  env  generate_exec_access_ratio.sh  generate_size_csv.sh  get_ept_violation_latencies.sh  get_exec_time_breakdown.sh  get_noop_threshold.sh  parse_out.py  parse_out_get_breakdown.py  parse_out_get_raw.py  ratio.txt  run-diff.sh  run-full-app-snapshot.sh  run.sh  run_hello_fullapp_mem.sh  run_microbenchmark.sh  run_ocr_diff.sh  run_ocr_fullapp.sh  run_ocr_regular.sh  setup-diff.sh  setup-full-app-snapshot.sh  setup.sh  show.py
microbenchmark/jsons/: create-dir  create-faceted  create-file  delete-dir  delete-faceted  delete-file  gen-blob  label-declassify  label-endorse  label-taint  read-dir  read-faceted  read-file  write
microbenchmark/requests/: audio-fingerprint-python3.json  hello-python3.json  image-enhance-python3.json  lorem-python3.json  ocr-python3.json  sentiment-analysis-python3.json  thumbnail-python3.json
microbenchmark/run_scripts/: run_diff.sh  run_fullapp.sh  run_reap.sh  run_regular.sh  run_seuss.sh  run_snapfaas.sh  run_snapfaas_reap.sh
microbenchmark/setup_scripts/: build_appfs.sh  build_binaries.sh  build_debug_base_snapshots.sh  build_debug_diff_snapshots.sh  build_diff_snapshots.sh  build_fullapp_snapshots.sh  build_rootfs.sh  pre_build.sh
microbenchmark/trace_cmd_scripts/: :  get_ept_counts.py  get_exec_time_breakdown.py  print_host_latencies.py  print_mmu_get_page.py  (+1 more)
resources/: README.md  default-conf.yaml  example-controller-config-snapshot.yaml  example-controller-config.yaml  example-function-configs-snapshot.yaml  example-function-configs.yaml  example-requests.json  example_function_configs.yaml  example_requests.json  hello.json  image-enhance.json  json-hello  lorem_alter.json  loremjs.json  lorempy2.json  markdown-to-html.json  push_request.json  sentiment-analysis.json
rootfs/: .gitignore  Dockerfile  build_openwhisk.sh  docker_build.sh  mk_rtimage.sh
rootfs/runtimes/python3/faasten/: pyproject.toml
rootfs/runtimes/python3/faasten/faasten/: __init__.py  syscalls_pb2.py
run/: config.yaml  syscall-storage.json
scripts/: cleanup-taps.sh  run-snapctr-regular-boot-example.sh  run-snapctr-snapshot-example.sh  setup-tap-bridge.sh
snapfaas/: Cargo.toml  build.rs
snapfaas/bins/: README.md
snapfaas/bins/admin_fstools/: main.rs
snapfaas/bins/dropboxui/server/: dummy_out.txt  main.rs
snapfaas/bins/faasten/: main.rs
snapfaas/bins/firerunner/: main.rs
snapfaas/bins/garbage-collector/: main.rs
snapfaas/bins/gateway/: main.rs
snapfaas/bins/httpserver/: main.rs
snapfaas/bins/multivm/: README.md  main.rs
snapfaas/bins/prepare_fs/: main.rs
snapfaas/bins/scheduler/: main.rs
snapfaas/bins/sfblob/: main.rs
snapfaas/bins/sfclient/: main.rs
snapfaas/bins/sfdb/: main.rs
snapfaas/bins/sffs/: main.rs
snapfaas/bins/singlevm/: main.rs
snapfaas/bins/uiserver/: main.rs
snapfaas/bins/worker/: main.rs
snapfaas/src/: cli.rs  cli_utils.rs  configs.rs  firecracker_wrapper.rs  fs_util.rs  gateway.rs  lib.rs  message.rs  metrics.rs  request.rs  resource_manager.rs  syscall_server.rs  syscalls.capnp  syscalls.proto  syscalls.rs  vm.rs  worker.rs
snapfaas/src/blobstore/: mod.rs
snapfaas/src/fs/: bootstrap.rs  errors.rs  function.rs  lmdb.rs  mod.rs  path.rs  tikv.rs  utils.rs
snapfaas/src/fs/github/: mod.rs
snapfaas/src/github/: mod.rs
snapfaas/src/labeled_fs/: README.md  dir.rs  direntry.rs  entry.rs  faceted.rs  file.rs  mod.rs  utils.rs
snapfaas/src/sched/: gateway.rs  message.rs  messages.proto  mod.rs  resource_manager.rs  rpc.rs  rpc_server.rs
src/: app.rs  configs.rs  controller.rs  firecracker_wrapper.rs  gateway.rs  lib.rs  message.rs  metrics.rs  request.rs  resource_manager.rs  server.rs  syscalls.proto  vm.rs  vsock.rs  worker.rs  workerpool.rs
tests/: fc_wrapper_test.sh
webhook/: Cargo.toml
(+2897 files in other folders)
