[package]
name = "snapfaas"
version = "0.1.0"
authors = ["David H. Liu<hl7@cs.princeton.edu>"]
edition = "2018"

[[bin]]
name = "snapctr"
path = "bins/snapctr/main.rs"

[[bin]]
name = "firerunner"
path = "bins/firerunner/main.rs"

[[bin]]
name = "client"
path = "bins/client/main.rs"

[[bin]]
name = "server"
path = "bins/server/main.rs"

[lib]

[dependencies]
url = "2.1.0"
clap = "2.33.0"
log = "0.4"
simple_logger = "1.3.0"
serde = {version = "1.0.102", features = ["derive"]}
serde_yaml = "0.8.11"
serde_json = "*"
shellexpand = "1.0.0"
nix = "0.16.0"
cgroups = "0.1.0"
vmm = { path = "firecracker/vmm", features = ["vsock"] }
sys_util = { path = "firecracker/sys_util" }
time = "0.1"
