[package]
name = "snapfaas"
version = "0.1.0"
authors = ["David H. Liu<hl7@cs.princeton.edu>", "Yue Tan<yuetan@cs.princeton.edu"]
edition = "2018"

[[bin]]
name = "snapctr"
path = "bins/snapctr/main.rs"

[[bin]]
name = "firerunner"
path = "bins/firerunner/main.rs"

[[bin]]
name = "client"
path = "bins/client/main.rs"

[[bin]]
name = "server"
path = "bins/server/main.rs"

[[bin]]
name = "fc_wrapper"
path = "bins/fc_wrapper/main.rs"

[lib]

[dependencies]
ctrlc = "^3.2.0"
reqwest = { version = "0.11", features = ["blocking"] }
labeled = { git = "git://github.com/alevy/labeled" }
bytes = "1.1.0"
prost = "0.9.0"
lmdb-rkv = "0.14.0"
url = "2.2"
clap = "2.33.0"
log ={ version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "^0.9.0"
serde = {version = "1.0.102", features = ["derive"]}
serde_yaml = "0.8.11"
serde_json = "*"
vmm = { path = "firecracker/vmm", features = ["vsock"]}
cgroups = "0.1.0"
memory_model = { path = "firecracker/memory_model" }
fc_util = { path = "firecracker/fc_util" }
sys_util = { path = "firecracker/sys_util" }
net_util = { path = "firecracker/net_util" }
time = "0.1"
signal-hook = "0.1.13"
crossbeam-channel = "0.4.2"
futures = "0.1.18"
glob =  "*"

[build-dependencies]
prost-build = "0.9.0"
