[package]
name = "snapfaas"
license = "MIT"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "firerunner"
path = "bins/firerunner/main.rs"

[[bin]]
name = "singlevm"
path = "bins/singlevm/main.rs"

[[bin]]
name = "multivm"
path = "bins/multivm/main.rs"

[[bin]]
name = "scheduler"
path = "bins/scheduler/main.rs"

[[bin]]
name = "garbage-collector"
path = "bins/garbage-collector/main.rs"

#[[bin]]
#name = "sfclient"
#path = "bins/sfclient/main.rs"

[[bin]]
name = "sfdb"
path = "bins/sfdb/main.rs"

#[[bin]]
#name = "sffs"
#path = "bins/sffs/main.rs"

[[bin]]
name = "sfblob"
path = "bins/sfblob/main.rs"

[[bin]]
name = "admin_fstools"
path = "bins/admin_fstools/main.rs"

[lib]

[dependencies]
rand = "^0.8.5"
ctrlc = "^3.2.0"
reqwest = { version = "0.11", features = ["blocking"] }
labeled = { git = "https://github.com/alevy/labeled", features = ["buckle"] }
bytes = "1.1.0"
byteorder = ">=1.2.1"
prost = "0.9.0"
lmdb-rkv = "0.14.0"
url = "2.2"
clap = "2.33.0"
log ={ version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "^0.9.0"
serde = {version = "1.0.102", features = ["derive"]}
serde_yaml = "0.8.11"
serde_json = "*"
cgroups = "0.1.0"
vmm = { git = "https://github.com/princeton-sns/firecracker", rev = "37f177869aecc5167b3b9b188ef907d171b59bfb", features = ["vsock"] }
memory_model = { git = "https://github.com/princeton-sns/firecracker", rev = "37f177869aecc5167b3b9b188ef907d171b59bfb" }
fc_util = { git = "https://github.com/princeton-sns/firecracker", rev = "37f177869aecc5167b3b9b188ef907d171b59bfb" }
sys_util = { git = "https://github.com/princeton-sns/firecracker", rev = "37f177869aecc5167b3b9b188ef907d171b59bfb" }
net_util = { git = "https://github.com/princeton-sns/firecracker", rev = "37f177869aecc5167b3b9b188ef907d171b59bfb" }
time = "*"
signal-hook = "0.1.13"
crossbeam = "0.8.2"
futures = "0.1.18"
glob =  "*"
tokio = { version = "1", features = [ "rt", "macros",  "process", "net" ] }
lazy_static = "1.4.0"
tempfile = "^3.3.0"
sha2 = "0.10.1"
hex = "0.4.3"
serde_with = { version = "2.1.0", features = ["json"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
threadpool = "1.8.1"
regex = "1"
r2d2 = "0.8.9"
tikv-client = { git = "https://github.com/tikv/client-rust", rev = "8f54e6114227718e256027df2577bbacdf425f86" }


[build-dependencies]
prost-build = "0.9.0"
