[package]
name = "webfront"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.102", features = ["derive"]}
serde_yaml = "*"
serde_json = "*"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
dotenv = "0.15.0"
clap = "^2.33.0"
#snapfaas = { path = "../../snapfaas" } 
reqwest = { version = "*", features = [ "blocking", "json", "multipart" ] }
github-types = "0.1.1"
rouille = "3.5.0"
openssl = "*"
jwt = { version = "0.15.0", features = [ "openssl" ]}
lazy_static = "1.4.0"
lmdb-rkv = "0.14.0"
regex = "1.5.4"
