[package]
name = "webfront"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.102", features = ["derive"]}
serde_yaml = "*"
serde_json = "*"
env_logger = "0.9.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
dotenv = "0.15.0"
chrono = "0.4.22"
clap = "^3.2.22"
reqwest = { version = "*", features = [ "blocking", "json", "multipart" ] }
github-types = "0.1.1"
rouille = "3.5.0"
openssl = "*"
jwt = { version = "0.15.0", features = [ "openssl" ]}
lazy_static = "1.4.0"
lmdb-rkv = "0.14.0"
regex = "1.5.4"
snapfaas = { path = "../../snapfaas" }
r2d2 = "0.8.9"
labeled = { git = "https://github.com/alevy/labeled", features = ["buckle"] }
prost = "0.9.0"
