[package]
name = "webfront"
license = "MIT"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.102", features = ["derive"]}
serde_yaml = "*"
serde_json = "*"
env_logger = "0.9.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
chrono = "0.4.22"
clap = "4.2.7"
reqwest = { version = "*", features = [ "blocking", "json", "multipart" ] }
github-types = "0.1.1"
rouille = "=3.6.2"
openssl = "*"
jwt = { version = "0.15.0", features = [ "openssl" ]}
lazy_static = "1.4.0"
lmdb-rkv = "0.14.0"
regex = "1.5.4"
snapfaas = { path = "../../snapfaas" }
r2d2 = "0.8.9"
labeled = { git = "https://github.com/alevy/labeled", features = ["buckle"] }
prost = "0.11.0"
mime = "0.3.17"
tokio = { version = "1", features = [ "rt", "macros",  "process", "net" ] }
tikv-client = "0.2.0"
percent-encoding = "2"
